# Labs

./: .clang-format  .gitignore
Semester 2/: 12Tab.txt  Lab1.cpp  Lab2.cpp  Lab3.cpp  Lab4.cpp  Lab5.cpp  Lab6.cpp  Lab8.cpp  Lab9.cpp
Semester 2/Lab7/: Makefile
Semester 2/Lab7/include/: mylib.hpp
Semester 2/Lab7/src/: Lab7.cpp  mylib.cpp  mylib.h
Semester 3/: Lab1.cpp  Lab2.cpp  Lab4.cpp  Lab5.cpp  Lab6.cpp  Lab7.cpp
Semester 3/Lab3/: Makefile  Table.bin~  Table.txt
Semester 3/Lab3/include/: lib.hpp
Semester 3/Lab3/src/: FromBin.cpp  FromText.cpp  lib.cpp
Semester 3/Lab8/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
Semester 4/: Lab1.c  Lab21.c  Lab22.c  Lab23.c  Lab3.c
Semester 4/Lab4/: Lab4.c  Lab4.cpp  input.txt
